Se agrega poder consulta solicitudes por dependencia
